--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -56,6 +56,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="@string/text_selected_facility"/>
+
+        <TextView
             android:id="@+id/text_selected_facility"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
